<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (c) 2009 Nicolas Raoul <nicolas.raoul@gmail.com>
~ Copyright (c) 2009 Edu Zamora <edu.zasu@gmail.com>
~ Copyright (c) 2009 Jordi Chacon <jordi.chacon@gmail.com>
~ Copyright (c) 2011 Norbert Nagold <norbert.nagold@gmail.com>
~ Copyright (c) 2012 Kostas Spyropoulos <inigo.aldana@gmail.com>
~ Copyright (c) 2014 Timothy Rae <perceptualchaos2@gmail.com>
~
~ This program is free software; you can redistribute it and/or modify it under
~ the terms of the GNU General Public License as published by the Free Software
~ Foundation; either version 3 of the License, or (at your option) any later
~ version.
~
~ This program is distributed in the hope that it will be useful, but WITHOUT ANY
~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
~ PARTICULAR PURPOSE. See the GNU General Public License for more details.
~
~ You should have received a copy of the GNU General Public License along with
~ this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<!-- Reviewing Preferences -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://arbitrary.app.namespace/com.ichi2.anki"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:title="@string/pref_cat_reviewing"
    android:key="@string/pref_reviewing_screen_key"
    tools:context=".preferences.ReviewingSettingsFragment">
    <PreferenceCategory android:title="@string/pref_cat_scheduling" >
        <com.ichi2.preferences.SliderPreference
            android:key="@string/day_offset_preference"
            android:valueFrom="0"
            android:valueTo="23"
            android:title="@string/day_offset_with_description"
            app1:persistent="false"
            app1:summaryFormat="@plurals/day_offset_summ"/>
        <com.ichi2.preferences.NumberRangePreferenceCompat
            android:key="@string/learn_cutoff_preference"
            android:title="@string/learn_cutoff"
            app:max="999"
            app:min="0"
            app1:summaryFormat="@plurals/pref_summ_minutes"/>
        <com.ichi2.preferences.NumberRangePreferenceCompat
            android:key="@string/time_limit_preference"
            android:title="@string/time_limit"
            app:max="9999"
            app:min="0"
            app1:summaryFormat="@plurals/pref_summ_minutes"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_advanced">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/keep_screen_on_preference"
            android:summary="@string/pref_keep_screen_on_summ"
            android:title="@string/pref_keep_screen_on" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/show_answer_button_badges_key"
            android:title="@string/show_answer_button_badges"
            android:summary="@string/show_answer_button_badges_summ" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/colorize_answer_buttons_key"
            android:title="@string/colorize_answer_buttons"
            android:summary="@string/colorize_answer_buttons_summ" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/more_options_in_top_app_bar_key"
            android:title="@string/more_options_in_top_app_bar"
            android:summary="@string/more_options_in_top_app_bar_summ" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/card_view_category">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/card_view_reviewer_key"
            android:title="@string/card_view_reviewer"
            android:summary="@string/card_view_reviewer_summ" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/card_view_reviewer_key"
            android:key="@string/card_tap_to_flip_key"
            android:title="@string/card_tap_to_flip"
            android:summary="@string/card_tap_to_flip_summ" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="@string/card_view_reviewer_key"
            android:key="@string/card_drag_to_grade_key"
            android:title="@string/card_drag_to_grade"
            android:summary="@string/card_drag_to_grade_summ" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/reviewer_css_styling" android:key="@string/reviewer_css_category">
        <ListPreference
            android:defaultValue="all"
            android:entries="@array/apply_hirameki_css_labels"
            android:entryValues="@array/apply_hirameki_css_values"
            android:key="@string/apply_hirameki_css_preference"
            android:title="@string/apply_hirameki_css"
            app1:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
