...
    <string name="collapse" comment="In the deck picker: accessibility label of the buttons that hide the subdecks of a deck.">Collapse</string>
    <string name="menu_import" comment="Title of the import page and the button to open it." maxLength="28">Import</string>
    <string name="no_cards_placeholder_title" comment="Text shown the first time AnkiDroid is opened, to explain to the user why they can't yet review.">Collection is empty</string>
    <string name="no_cards_placeholder_description" comment="Text shown the first time AnkiDroid is opened, to explain what should be their first action.">Start adding cards
using the + icon.</string>
    <string name="type_answer_hint" comment="In the reviewer. When the user use note type with hint. It's the default content of the text field in which the user is invited to type their answer. It disappears as soon as the user start to type.">Type answer</string>
    <string name="show_answer" comment="When displaying the question side of a card. This is the label of a button that display the answer side." maxLength="41">Show answer</string>
    <string name="hide_answer" comment="In the previewer, when the answer side is displayed. This is the label of the button that sends back to the question side.">Hide answer</string>
    <string name="ease_button_again" comment="In the reviewer, in the answer side. Label of the button that request the card to be shown again soon." maxLength="41">Again</string>
    <string name="ease_button_hard" comment="In the reviewer, in the answer side. Label of the button that used by the user to state finding the correct answer was hard." maxLength="41">Hard</string>
    <string name="ease_button_good" comment="In the reviewer, in the answer side. Label of the button that used by the user to state their answer was good." maxLength="41">Good</string>

    <!-- General -->
    <string name="ease_button_easy" comment="In the reviewer, in the answer side. Label of the button that used by the user to state that finding the answer to the question was easy." maxLength="41">Easy</string>
    <string name="show_answer_hint_long_press" comment="In the reviewer, hint is shown when touching the show answer button and the user has the long-press accessibility setting enabled">\'%s\' is enabled</string>
    <string name="card_view_question_side" comment="In the reviewer with 'Review on a card' enabled: the screen reader label of the card while it shows the question">Card, question side</string>
    <string name="card_view_answer_side" comment="In the reviewer with 'Review on a card' enabled: the screen reader label of the card once it shows the answer">Card, answer side</string>
...
