...
    <string name="empty_cards_action" comment="Generic empty action. Duplicated in empty_cram_label for filtered deck context">Empty</string>
    <string name="deck_options" comment="Generic deck options label. Duplicated in menu__deck_options for menu context">Deck options</string>
    <string name="add_card" comment="Add card button. Duplicated in menu_add as case-insensitive match">Add card</string>
    <string name="get_shared" comment="Button to get shared decks. Duplicated in menu_get_shared_decks for menu context">Get shared decks</string>
    <string name="search_decks" maxLength="28">Search decks</string>
    <string name="close">Close</string>
    <string name="more_options" comment="Generic more options label. Duplicated in whiteboard_more_options for whiteboard context">More options</string>
    <string name="custom_study" maxLength="28">Custom Study</string>
    <string name="unanswer_card">Unanswer card</string>
    <string name="unbury" maxLength="28">Unbury</string>
    <string name="new_deck">Create deck</string>
    <string name="new_dynamic_deck">Create filtered deck</string>
    <string name="add" comment="Generic add action. Duplicated in import_message_add for import context">Add</string>
...
